@@ -6,12 +6,14 @@ makeRLearner.classif.lda = function() {
     par.set = makeParamSet(
       makeDiscreteLearnerParam(id = "method", default = "moment", values = c("moment", "mle", "mve", "t")),
       makeNumericLearnerParam(id = "nu", lower = 2, requires = expression(method=="t")),
-      makeNumericLearnerParam(id = "tol", default = 1e-4, lower = 0)
+      makeNumericLearnerParam(id = "tol", default = 1e-4, lower = 0),
+      makeDiscreteLearnerParam(id = "predict.method", values = c("plug-in", "predictive", "debiased"),
+        default = "plug-in", when = "predict")
     ),
     properties = c("twoclass", "multiclass", "numerics", "factors", "prob"),
     name = "Linear Discriminant Analysis",
     short.name = "lda",
-    note = ""
+    note = "Learner param 'predict.method' maps to 'method' in predict.lda."
   )
 }
 
